--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyAFTylTQiMR1JwxltSEuuq6DdHNMf11ZRY
-      "/>
+        android:value="AIzaSyAFTylTQiMR1JwxltSEuuq6DdHNMf11ZRY"/>
     </application>
 
 </manifest>
