initial navigation logic implemented

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "storybook": "storybook start",
     "test": "jest"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "7.4.4",
     "@babel/runtime": "7.4.4",
+    "@storybook/react-native": "^4.1.18",
     "babel-jest": "24.7.1",
     "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.54.0",
