--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-gesture-handler": "^1.2.1",
     "react-native-maps": "^0.24.2",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.9.1"
+    "react-navigation": "^3.9.1",
+    "react-navigation-transitions": "^1.0.10"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
