--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-popup-dialog": "^0.18.2",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
-    "react-navigation-transitions": "^1.0.10"
+    "react-navigation-transitions": "^1.0.10",
+    "react-viro": "2.14.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
