--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@99xt/first-born": "^1.1.1",
     "create-react-class": "^15.6.3",
     "deepmerge": "^3.2.0",
+    "fuse.js": "^3.4.4",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.5",
