--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-elements": "^1.1.0",
+    "react-native-firebase": "^5.3.1",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-maps": "^0.24.2",
     "react-native-modal": "^10.0.0",
