--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-maps": "^0.24.2",
+    "react-native-maps-directions": "^1.7.0",
     "react-native-modal": "^10.0.0",
     "react-native-paper": "^2.15.2",
     "react-native-popup-dialog": "^0.18.2",
