--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@99xt/first-born": "^1.1.1",
     "create-react-class": "^15.6.3",
     "deepmerge": "^3.2.0",
+    "eslint-config-standard": "^12.0.0",
     "firebase": "^6.1.0",
     "fuse.js": "^3.4.4",
     "metro-config": "^0.54.1",
@@ -25,6 +26,7 @@
     "react-native-modal": "^10.0.0",
     "react-native-paper": "^2.15.2",
     "react-native-popup-dialog": "^0.18.2",
+    "react-native-pose": "^0.9.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
@@ -36,6 +38,7 @@
     "@babel/runtime": "7.4.4",
     "@storybook/react-native": "^4.1.18",
     "babel-jest": "24.7.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.54.0",
     "react-test-renderer": "16.8.3"
